force-app/main/default/objects/VisitReportTradeFair__c/VisitReportTradeFair__c.object-meta.xml
<CustomObject>
    <description>Messe Besuchsbericht</description>
    <label>Messe Besuchsbericht</label>
    <nameField>
        <displayFormat>Visit-Report-{0000}</displayFormat>
        <label>Visit Report Messe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messe Besuchsberichte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>