force-app/main/default/objects/VisitReportTradeFair__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>