force-app/main/default/objects/VisitReportTradeFair__c/fields/Building_Project_I__c.field-meta.xml
<CustomField>
    <fullName>Building_Project_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project I</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair (Building Project I)</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair1</relationshipName>
    <type>Lookup</type>
</CustomField>