force-app/main/default/objects/VisitReportTradeFair__c/fields/Building_Project_II__c.field-meta.xml
<CustomField>
    <fullName>Building_Project_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project II</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair (Building Project II)</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair2</relationshipName>
    <type>Lookup</type>
</CustomField>