force-app/main/default/objects/VisitReportTradeFair__c/fields/Building_Project_III__c.field-meta.xml
<CustomField>
    <fullName>Building_Project_III__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project III</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair (Building Project III)</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair3</relationshipName>
    <type>Lookup</type>
</CustomField>