force-app/main/default/objects/VisitReportTradeFair__c/fields/Building_Project_IV__c.field-meta.xml
<CustomField>
    <fullName>Building_Project_IV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project IV</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair (Building Project IV)</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair4</relationshipName>
    <type>Lookup</type>
</CustomField>