force-app/main/default/objects/VisitReportTradeFair__c/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Besprochenes Bauvorhaben</description>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair</relationshipName>
    <type>Lookup</type>
</CustomField>