force-app/main/default/objects/VisitReportTradeFair__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name der Messe</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>