force-app/main/default/objects/VisitReportTradeFair__c/fields/DataPolicy__c.field-meta.xml
<CustomField>
    <fullName>DataPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Besucher wurde mündlich über die Datenschutzrichtlinien informiert.</inlineHelpText>
    <label>Data policy</label>
    <type>Checkbox</type>
</CustomField>