force-app/main/default/objects/VisitReportTradeFair__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Reports Trade Fair</relationshipLabel>
    <relationshipName>Visit_Reports_Trade_Fair</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>