force-app/main/default/objects/VisitReportTradeFair__c/validationRules/Data_Policy_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Policy_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(DataPolicy__c)</errorConditionFormula>
    <errorDisplayField>DataPolicy__c</errorDisplayField>
    <errorMessage>Datenschutzrichtlinie muss akzeptiert werden, um fortzufahren.</errorMessage>
</ValidationRule>